Minimal updates to CSS to present a more 'material' centric display for the buttons.

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -20,6 +20,8 @@
     .dialog > div {
         margin: 5%;
         padding: 1%;
-        font-size: 2em;
         padding: 2%;
+    }
+    #dialogMessage {
+        font-size: 2em;
     }
