--- a/css/main.css
+++ b/css/main.css
@@ -27,3 +27,33 @@ body {
             margin-top: 1%;
             font-size: 4vH;
         }
+
+.bttn{
+    display: inline-block;
+    padding:0.7em 1.4em;
+    cursor: pointer;
+    border-radius:0.15em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    text-transform:uppercase;
+    font-weight:400;
+    color:#FFFFFF;
+    background-color:#3369ff;
+    box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    text-align:center;
+    position:relative;
+}
+    .bttnA{
+        margin: 3em !important;
+    }
+    .bttnB {
+        margin: 1em !important;
+    }
+.bttn:active{ top: 0.1em; }
+@media all and (max-width:30em){
+    .buttonb {
+        display: block;
+        margin: 0.4em auto;
+    }
+}
